@@ -1,3 +1,11 @@
+2004-04-15  Elijah Newren  <newren@math.utah.edu>
+
+	* src/display.c: Prevent unwanted grab op from occurring.
+	Previously, for some people under certain conditions, clicking and
+	releasing the mouse button rapidly enough would result in Metacity
+	starting a move operation due to ignoring the button release.
+	This should fix that problem (it does for me).  See bug 136587.
+
 2004-04-11  Rob Adams  <readams@readams.net>
 
 	* configure.in: Make the --enable-xinerama switch work properly.
